COMP-button feat: button component built,  tests, and doc

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,7 +24,8 @@ $font-bold: 700;
  $color-blue-dark: #093278;
  $color-red-light: #E11845;
  $color-red-dark: #830421;
- $color-pink: #FF00BD;
+ $color-pink-light: #FF00BD;
+ $color-pink-dark: #A1087A;
  $color-yellow-light: #F2CA19;
  $color-yellow-dark: #C1A217;
  $color-green-light: #87E911; 
