UI-page-study feat: study page and comp styling adjustments

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -1,8 +1,12 @@
 @import './variables';
 
 html {
+    margin:0;
+    padding: 0;
+
     body {
         font-family: $font-family;
-        color: $color-black
+        margin:0;
+        padding: 0;
     }
 }
