--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,9 @@
 @import './variables';
 @import './mixins';
 @import './elements';
+
+.App {
+    height: 100vh;
+    font-family: 'VT323', monospace;
+    width: 100%;
+}
