--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -11,6 +11,15 @@
     flex-wrap: wrap;
  }
 
+ @mixin flex-row-between {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-between;
+   flex-wrap: wrap;
+}
+
+
  @mixin flex-column-center {
     display: flex;
     flex-direction: column;
